[package]
name = "rss"
version = "1.9.0"
authors = ["James Hurst <jh.jameshurst@gmail.com>", "Corey Farwell <coreyf@rwell.org>", "Chris Palmer <pennstate5013@gmail.com>"]
description = "Library for serializing the RSS web content syndication format"
repository = "https://github.com/rust-syndication/rss"
documentation = "https://docs.rs/rss/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["rss", "feed", "parser", "parsing"]
include = ["src/*", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]
edition = "2018"

[package.metadata.docs.rs]
all-features = false

[features]
default = ["builders"]
builders = ["derive_builder"]
from_url = ["reqwest"]
validation = ["chrono", "url", "mime"]

[dependencies]
quick-xml = { version = "0.17", features = ["encoding"] }
derive_builder = { version = "0.9", optional = true }
chrono = {version = "0.4", optional = true }
url = { version = "2.1", optional = true }
mime = { version = "0.3", optional = true }
reqwest = { version = "0.9", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
